# decision-making-deep-research-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/agent/: graph.py  llm.py  nodes.py  state.py
backend/app/agent/tools/: web_search.py  yahoo_finance.py
backend/app/api/routes/: health.py  research.py
backend/app/memory/: conversation_store.py  pinecone_client.py
backend/tests/: conftest.py  test_schemas.py
backend/tests/test_agent/: test_graph_routing.py  test_nodes.py
backend/tests/test_api/: test_research_routes.py
backend/tests/test_memory/: test_conversation_store.py
backend/tests/test_tools/: test_web_search.py  test_yahoo_finance.py
docs/: PROJECT_CONTEXT.md  TECHNICAL.md  TRADEOFFS.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInput.tsx  MessageList.tsx  ModeToggle.tsx  ResearchProgress.tsx
notebooks/: api_test.ipynb
